--- a/app/views/about/advisory_council.haml
+++ b/app/views/about/advisory_council.haml
@@ -3,84 +3,72 @@
         .span12#panel-main
             .content
                 %h2 Our Advisory Council
+                %p Our advisory council members have been instrumental resources for gathering ideas and gaining advice throughout our entire start-up process. We are thankful for their support in this way.
                 .row
                     .span12
-                        %ul.thumbnails
-                            %li.span4
+                        %ul.thumbnails#council
+                            %li.span3
                                 .thumbnail
-                                    %img{:src => "http://placehold.it/260x170"}
                                     .caption
                                         %h4 Kim Hollie
                                         %small Parent, Brooklyn Center
-                            %li.span4
+                            %li.span3
                                 .thumbnail
-                                    %img{:src => "http://placehold.it/260x170"}
                                     .caption
                                         %h4 Jim Bartholomew
                                         %small Education Policy Director, Minnesota Business Partnership
-                            %li.span4
+                            %li.span3
                                 .thumbnail
-                                    %img{:src => "http://placehold.it/260x170"}
                                     .caption
                                         %h4 Carol Bruess, Ph.D.
                                         %small Professor and Director, Family Studies, University of St. Thomas
-                            %li.span4
+                            %li.span3
                                 .thumbnail
-                                    %img{:src => "http://placehold.it/260x170"}
                                     .caption
                                         %h4 Barb Johnson
                                         %small President, Minneapolis City Council
-                            %li.span4
+                            %li.span3
                                 .thumbnail
-                                    %img{:src => "http://placehold.it/260x170"}
                                     .caption
                                         %h4 Aisha Eady
                                         %small Communications Director, Osseo Area Schools
-                            %li.span4
+                            %li.span3
                                 .thumbnail
-                                    %img{:src => "http://placehold.it/260x170"}
                                     .caption
                                         %h4 Pat Kelly
                                         %small Partner, Fredrickson & Byron
-                            %li.span4
+                            %li.span3
                                 .thumbnail
-                                    %img{:src => "http://placehold.it/260x170"}
                                     .caption
                                         %h4 John Lawlor
                                         %small Founder and Principal, The Lawlor Group
-                            %li.span4
+                            %li.span3
                                 .thumbnail
-                                    %img{:src => "http://placehold.it/260x170"}
                                     .caption
                                         %h4 Karl O. Benson
                                         %small Manager at Octane LLC, Founder of Foundation 4 Excellence
-                            %li.span4
+                            %li.span3
                                 .thumbnail
-                                    %img{:src => "http://placehold.it/260x170"}
                                     .caption
                                         %h4 Phyllis Sloan
                                         %small Executive Director, La Creche Child Care Center, North Minneapolis
-                            %li.span4
+                            %li.span3
                                 .thumbnail
-                                    %img{:src => "http://placehold.it/260x170"}
                                     .caption
                                         %h4 Mike Opat
                                         %small Chair, Hennepin County Commissioners
-                            %li.span4
+                            %li.span3
                                 .thumbnail
-                                    %img{:src => "http://placehold.it/260x170"}
                                     .caption
                                         %h4 Jeff Peterson
                                         %small Director of Strategy and Innovation, General Mills
-                            %li.span4
+                            %li.span3
                                 .thumbnail
-                                    %img{:src => "http://placehold.it/260x170"}
                                     .caption
                                         %h4 Brenda Ray
                                         %small Parent, North Minneapolis
-                            %li.span4
+                            %li.span3
                                 .thumbnail
-                                    %img{:src => "http://placehold.it/260x170"}
                                     .caption
                                         %h4 Maggie Skrypek
                                         %small Research Scientist, Wilder Foundation
