--- a/app/views/about/advisory_council.haml
+++ b/app/views/about/advisory_council.haml
@@ -10,23 +10,8 @@
                             %li.span3
                                 .thumbnail
                                     .caption
-                                        %h4 Kim Hollie
-                                        %small Parent, Brooklyn Center
-                            %li.span3
-                                .thumbnail
-                                    .caption
-                                        %h4 Jim Bartholomew
-                                        %small Education Policy Director, Minnesota Business Partnership
-                            %li.span3
-                                .thumbnail
-                                    .caption
                                         %h4 Carol Bruess, Ph.D.
                                         %small Professor and Director, Family Studies, University of St. Thomas
-                            %li.span3
-                                .thumbnail
-                                    .caption
-                                        %h4 Barb Johnson
-                                        %small President, Minneapolis City Council
                             %li.span3
                                 .thumbnail
                                     .caption
@@ -72,3 +57,18 @@
                                     .caption
                                         %h4 Maggie Skrypek
                                         %small Research Scientist, Wilder Foundation
+                            %li.span3
+                                .thumbnail
+                                    .caption
+                                        %h4 Kerry Givens
+                                        %small Executive Director, South Minneapolis YMCA
+                            %li.span3
+                                .thumbnail
+                                    .caption
+                                        %h4 Neda Kellogg
+                                        %small Founder and CEO, Project Diva
+                            %li.span3
+                                .thumbnail
+                                    .caption
+                                        %h4 Vidal Guzm&aacute;n
+                                        %small Senior Manager at Public Radio International
