--- a/app/views/about/advisory_council.haml
+++ b/app/views/about/advisory_council.haml
@@ -1,6 +1,6 @@
 .container
     .row
-        .span12#panel-main
+        .span12.panel#panel-main
             .content
                 %h2 Our Advisory Council
                 %p Our advisory council members have been instrumental resources for gathering ideas and gaining advice throughout our entire start-up process. We are thankful for their support in this way.
