--- a/app/views/about/advisory_council.haml
+++ b/app/views/about/advisory_council.haml
@@ -4,9 +4,9 @@
             .content
                 %h2 Our Advisory Council
                 %p Our advisory council members have been instrumental resources for gathering ideas and gaining advice throughout our entire start-up process. We are thankful for their support in this way.
-                .row
+                .row-fluid
                     .span12
-                        %ul.thumbnails#council
+                        %ul.thumbnails.council
                             %li.span3
                                 .thumbnail
                                     .caption
@@ -27,6 +27,8 @@
                                     .caption
                                         %h4 John Lawlor
                                         %small Founder and Principal, The Lawlor Group
+                        %br
+                        %ul.thumbnails.council
                             %li.span3
                                 .thumbnail
                                     .caption
@@ -47,6 +49,8 @@
                                     .caption
                                         %h4 Jeff Peterson
                                         %small Director of Strategy and Innovation, General Mills
+                        %br
+                        %ul.thumbnails.council
                             %li.span3
                                 .thumbnail
                                     .caption
@@ -67,6 +71,8 @@
                                     .caption
                                         %h4 Neda Kellogg
                                         %small Founder and CEO, Project Diva
+                        %br
+                        %ul.thumbnails.council
                             %li.span3
                                 .thumbnail
                                     .caption
